feat: netlify functions + redirects; better frontend error handling; dynamic referer

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
 [build]
   publish = "public"
   command = "echo Build skipped"
+
+[functions]
+  directory = "netlify/functions"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
